--- a/styles/components/action.scss
+++ b/styles/components/action.scss
@@ -4,6 +4,7 @@
         padding-top: 4.5rem;
     }
     &__image {
+        width: 100%;
         padding-bottom: 1.15rem;
     }
 }
