--- a/styles/components/containers.scss
+++ b/styles/components/containers.scss
@@ -1,11 +1,12 @@
 .container {
-    @include breakout;
     background: #fff;
-    padding: 7rem 5rem;
-
+    padding-top: 3.5rem;
+    @include breakout;
+    @include padding-mixin;
     @include heading-with-paragraph;
 
     @include mobile-break {
+        padding: 7rem 5rem;
         max-width: $content-width;
     }
 }
