--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,10 +1,10 @@
 @mixin padding-mixin {
     padding-left: 16px;
-        padding-right: 16px;
-        @media only screen and (min-width: $content-width) {
-            padding-left: 0px;
-            padding-right: 0px;
-        }
+    padding-right: 16px;
+    @media only screen and (min-width: $content-width) {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
 
 @mixin mobile-break {
@@ -26,8 +26,11 @@
     grid-template-rows: 1fr 1fr;
     grid-template-columns: none;
     gap: 1.25rem;
-    
+    @include breakout;
+
     @include mobile-break {
+        max-width: $content-width;
+        width: 100%;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: none;
     }
